# auto-bump-service-version

./: .editorconfig  README.md  setup.cfg
autobump/: __init__.py  main.py
src/: __init__.py  main.py
tests/: test_routes.py  test_version.py
