[metadata]
name = auto-bump-version
version = attr: autobump.PACKAGE_VERSION
description = Bump version whenever push to main upstream using python scripts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikolasvargas/auto-bump-version
author = Níkolas Vargas
author_email = vargasnikolass@gmail.com
license = Apache License, Version 2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache License v2.0
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    fastapi==0.70.0
    requests
    uvicorn[standard]==0.15.0
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
